Updating to latest FlutterFlow output.

--- a/web/index.html
+++ b/web/index.html
@@ -43,7 +43,7 @@
 
   <!-- Status Bar color in Safari browser (iOS) and PWA -->
   <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
-  <meta name="theme-color" media="(prefers-color-scheme: dark)"  content="#1a1f24">
+  <meta name="theme-color" media="(prefers-color-scheme: dark)"  content="#ffffff">
 
   <link rel="manifest" href="manifest.json">
   <script>
